Updates to Pandas Queries SQL Alchemy to summarize salary by title

--- a/EmployeeSQL/SQL_Challenge_Pandas_Exercise.ipynb
+++ b/EmployeeSQL/SQL_Challenge_Pandas_Exercise.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 24,
    "id": "4a676c4d",
    "metadata": {},
    "outputs": [],
@@ -14,19 +14,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 25,
    "id": "d6203621",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# engine = create_engine('postgresql://postgres:Mobil1234#@localhost:5432/postgres')\n",
-    "engine = create_engine('postgresql://postgres:Mobil1234#@localhost:5432/SQL_Challenge')\n",
+    "# engine = create_engine('postgresql://postgres:PASSWORD@localhost:5432/postgres')\n",
+    "engine = create_engine('postgresql://postgres:PASSWORD@localhost:5432/SQL_Challenge')\n",
     "connection = engine.connect()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 26,
    "id": "7b6df2a1",
    "metadata": {},
    "outputs": [
@@ -94,7 +94,7 @@
        "4   10005   78228"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -106,8 +106,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "db30f129",
+   "execution_count": 27,
+   "id": "9ce7b3b4",
    "metadata": {},
    "outputs": [
     {
@@ -204,7 +204,7 @@
        "4  282238        e0003  1952-10-28  Abdelkader    Baumann   F  1991-01-18"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -216,8 +216,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "f5bd337a",
+   "execution_count": 28,
+   "id": "14658104",
    "metadata": {},
    "outputs": [
     {
@@ -296,7 +296,7 @@
        "6    m0001             Manager"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -308,8 +308,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "4241757a",
+   "execution_count": 29,
+   "id": "e4be90bd",
    "metadata": {},
    "outputs": [
     {
@@ -419,7 +419,7 @@
        "4   40000  "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -431,13 +431,287 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 32,
+   "id": "001ac7e6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>emp_no</th>\n",
+       "      <th>emp_title_id</th>\n",
+       "      <th>birth_date</th>\n",
+       "      <th>first_name</th>\n",
+       "      <th>last_name</th>\n",
+       "      <th>sex</th>\n",
+       "      <th>hire_date</th>\n",
+       "      <th>salary</th>\n",
+       "      <th>title_id</th>\n",
+       "      <th>title</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>473302</td>\n",
+       "      <td>s0001</td>\n",
+       "      <td>1953-07-25</td>\n",
+       "      <td>Hideyuki</td>\n",
+       "      <td>Zallocco</td>\n",
+       "      <td>M</td>\n",
+       "      <td>1990-04-28</td>\n",
+       "      <td>40000</td>\n",
+       "      <td>s0001</td>\n",
+       "      <td>Staff</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>421786</td>\n",
+       "      <td>s0001</td>\n",
+       "      <td>1957-09-28</td>\n",
+       "      <td>Xiong</td>\n",
+       "      <td>Verhoeff</td>\n",
+       "      <td>M</td>\n",
+       "      <td>1987-11-26</td>\n",
+       "      <td>40000</td>\n",
+       "      <td>s0001</td>\n",
+       "      <td>Staff</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>273487</td>\n",
+       "      <td>s0001</td>\n",
+       "      <td>1957-04-14</td>\n",
+       "      <td>Christoph</td>\n",
+       "      <td>Parfitt</td>\n",
+       "      <td>M</td>\n",
+       "      <td>1991-06-28</td>\n",
+       "      <td>56087</td>\n",
+       "      <td>s0001</td>\n",
+       "      <td>Staff</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>246449</td>\n",
+       "      <td>s0001</td>\n",
+       "      <td>1958-03-23</td>\n",
+       "      <td>Subbu</td>\n",
+       "      <td>Bultermann</td>\n",
+       "      <td>F</td>\n",
+       "      <td>1988-03-25</td>\n",
+       "      <td>87084</td>\n",
+       "      <td>s0001</td>\n",
+       "      <td>Staff</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>48085</td>\n",
+       "      <td>s0001</td>\n",
+       "      <td>1964-01-19</td>\n",
+       "      <td>Venkatesan</td>\n",
+       "      <td>Gilg</td>\n",
+       "      <td>M</td>\n",
+       "      <td>1993-06-28</td>\n",
+       "      <td>63016</td>\n",
+       "      <td>s0001</td>\n",
+       "      <td>Staff</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   emp_no emp_title_id  birth_date  first_name   last_name sex   hire_date  \\\n",
+       "0  473302        s0001  1953-07-25    Hideyuki    Zallocco   M  1990-04-28   \n",
+       "1  421786        s0001  1957-09-28       Xiong    Verhoeff   M  1987-11-26   \n",
+       "2  273487        s0001  1957-04-14   Christoph     Parfitt   M  1991-06-28   \n",
+       "3  246449        s0001  1958-03-23       Subbu  Bultermann   F  1988-03-25   \n",
+       "4   48085        s0001  1964-01-19  Venkatesan        Gilg   M  1993-06-28   \n",
+       "\n",
+       "   salary title_id  title  \n",
+       "0   40000    s0001  Staff  \n",
+       "1   40000    s0001  Staff  \n",
+       "2   56087    s0001  Staff  \n",
+       "3   87084    s0001  Staff  \n",
+       "4   63016    s0001  Staff  "
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "final_database = employee_salaries.merge(titles, left_on = \"emp_title_id\", right_on = \"title_id\")\n",
+    "final_database.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "d30c4cbc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "emp_no          300024\n",
+       "emp_title_id    300024\n",
+       "birth_date      300024\n",
+       "first_name      300024\n",
+       "last_name       300024\n",
+       "sex             300024\n",
+       "hire_date       300024\n",
+       "salary          300024\n",
+       "title_id        300024\n",
+       "title           300024\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "final_database.count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "7e66406a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>title</th>\n",
+       "      <th>salary</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Staff</td>\n",
+       "      <td>40000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Staff</td>\n",
+       "      <td>40000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Staff</td>\n",
+       "      <td>56087</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Staff</td>\n",
+       "      <td>87084</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Staff</td>\n",
+       "      <td>63016</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   title  salary\n",
+       "0  Staff   40000\n",
+       "1  Staff   40000\n",
+       "2  Staff   56087\n",
+       "3  Staff   87084\n",
+       "4  Staff   63016"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "salary_title = final_database[['title', 'salary']]\n",
+    "salary_title.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "1810a195",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "title\n",
+       "Assistant Engineer    48564.43\n",
+       "Engineer              48535.34\n",
+       "Manager               51531.04\n",
+       "Senior Engineer       48506.80\n",
+       "Senior Staff          58550.17\n",
+       "Staff                 58465.38\n",
+       "Technique Leader      48582.90\n",
+       "Name: salary, dtype: float64"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "salary_title_mean = salary_title.groupby('title')['salary'].mean().round(2)\n",
+    "salary_title_mean"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "8c4e0f58",
+   "id": "cf7c521d",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "final_database = employee_salaries.merge(titles, left_on =  )"
-   ]
+   "source": []
   }
  ],
  "metadata": {
