additions to the schema png and schema.sql files for the addition of table primary keys, also updated commentary to the Pandas exercise

--- a/EmployeeSQL/SQL_Challenge_Pandas_Exercise.ipynb
+++ b/EmployeeSQL/SQL_Challenge_Pandas_Exercise.ipynb
@@ -2,11 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 2,
    "id": "4a676c4d",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Dependencies\n",
     "import pandas as pd\n",
     "from sqlalchemy import create_engine\n",
     "import matplotlib.pyplot as plt"
@@ -14,18 +15,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 3,
    "id": "d6203621",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Connection to Postgresql, the Database name is \"SQL_Challenge\"\n",
     "engine = create_engine('postgresql://postgres:Mobil1234#@localhost:5432/SQL_Challenge')\n",
     "connection = engine.connect()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 4,
    "id": "7b6df2a1",
    "metadata": {},
    "outputs": [
@@ -93,19 +95,20 @@
        "4   10005   78228"
       ]
      },
-     "execution_count": 106,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Connection to table Salaries:\n",
     "salaries=pd.read_sql(\"SELECT * FROM salaries\",connection)\n",
     "salaries.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 5,
    "id": "ba2f0f1e",
    "metadata": {},
    "outputs": [
@@ -203,12 +206,13 @@
        "4  282238        e0003  1952-10-28  Abdelkader    Baumann   F  1991-01-18"
       ]
      },
-     "execution_count": 107,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# To connect to table employees:\n",
     "employees=pd.read_sql(\"SELECT * FROM employees\",connection)\n",
     "employees.head()"
    ]
@@ -301,6 +305,7 @@
     }
    ],
    "source": [
+    "# To connect to table titles:\n",
     "titles=pd.read_sql(\"SELECT * FROM titles\",connection)\n",
     "titles"
    ]
@@ -424,6 +429,7 @@
     }
    ],
    "source": [
+    "# To merge the employees table with the salaries table on \"emp_no\" to create dataframe: \"employee_salaries\" \n",
     "employee_salaries = employees.merge(salaries, on = \"emp_no\")\n",
     "employee_salaries.head()"
    ]
@@ -559,6 +565,7 @@
     }
    ],
    "source": [
+    "# To merge \"employee_salaries\" dataframe with the Titles table to create the \"final database\"\n",
     "final_database = employee_salaries.merge(titles, left_on = \"emp_title_id\", right_on = \"title_id\")\n",
     "final_database.head()"
    ]
@@ -591,6 +598,7 @@
     }
    ],
    "source": [
+    "# to check for possible \"null values\" (note: record count 300024 number validates back to employee table).   \n",
     "final_database.count()"
    ]
   },
@@ -670,6 +678,7 @@
     }
    ],
    "source": [
+    "# To modify the \"final database\" dataframe to reflect only columns \"title\" and \"salary\". \n",
     "salary_title = final_database[['title', 'salary']]\n",
     "salary_title.head()"
    ]
@@ -759,19 +768,10 @@
     }
    ],
    "source": [
+    "# Average Salary by Title (used for the Bar Chart shown below). \n",
     "salary_title_mean = salary_title.groupby('title')['salary'].mean().round(2)\n",
     "salary_title_mean = pd.DataFrame(salary_title_mean)\n",
     "salary_title_mean"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 137,
-   "id": "a6298e44",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# salary_title.head()"
    ]
   },
   {
@@ -794,6 +794,7 @@
     }
    ],
    "source": [
+    "# Histogram Chart to visualize the most common salary ranges for employees.\n",
     "plt.hist(salary_title['salary'],color='blue', bins=10)\n",
     "plt.ylabel('Frequency')\n",
     "plt.xlabel('Salary Ranges for Employees')\n",
@@ -822,6 +823,7 @@
     }
    ],
    "source": [
+    "# Bar Chart of the average salary by title:\n",
     "plt.figure(figsize=(15,5))\n",
     "y_axis = salary_title_mean.sort_values(by = 'salary', ascending = False)[\"salary\"]\n",
     "x_axis = salary_title_mean.sort_values(by = 'salary', ascending = False).index \n",
