updates to ReadMe file and Pandas files

--- a/EmployeeSQL/Bonus/SQL_Challenge_Pandas_Exercise.ipynb
+++ b/EmployeeSQL/Bonus/SQL_Challenge_Pandas_Exercise.ipynb
@@ -21,7 +21,7 @@
    "outputs": [],
    "source": [
     "# Connection to Postgresql, the Database name is \"SQL_Challenge\"\n",
-    "engine = create_engine('postgresql://postgres:Mobil1234#@localhost:5432/SQL_Challenge')\n",
+    "engine = create_engine('postgresql://postgres:PASSWORD@localhost:5432/SQL_Challenge')\n",
     "connection = engine.connect()"
    ]
   },
